# pyASD

./: .gitignore  .pre-commit-config.yaml  ASD_File_Reader.py  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README copy.md  README.md  VERSION_MANAGEMENT.md  __init__.py  constant.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: debug-trusted-publishing.yml  notify-approval-needed.yml  publish-to-pypi.yml  publish-to-testpypi.yml  python-package.yml  sync-branches.yml
.pre-commit-hooks/: check_changelog_format.py  check_commit_message.py  check_version_consistency.py
docs/: CI_CD_WORKFLOWS.md  FALLBACK_API_TOKEN_SETUP.md  GITHUB_ENVIRONMENT_SETUP.md  IMPROVEMENTS_2025-10-07.md  RELEASE_EXAMPLES.md  TROUBLESHOOTING_TRUSTED_PUBLISHING.md  TRUSTED_PUBLISHING_IMPLEMENTATION_SUMMARY.md  TRUSTED_PUBLISHING_SETUP.md  VERSION_ROLLBACK.md
gui/: README.md  README_CN.md  TOOLBAR_DESIGN_CN.md  __init__.py  main_window.py
gui/utils/: __init__.py  export_utils.py
gui/widgets/: __init__.py  batch_export_dialog.py  file_panel.py  metadata_widget.py  multi_plot_canvas.py  overlay_plot_widget.py  plot_widget.py  properties_panel.py  statistics_widget.py
scripts/: diagnose_trusted_publishing.sh  publish.sh  release.sh  test_environment_setup.sh  test_release.sh  validate_release.py
scripts/utils/: __init__.py  changelog_manager.py
src/: ASD_File_Reader.py  __init__.py  _version.py  asd_file_reader.py  constant.py  file_attributes.py
tests/: test_ASD_File_Reader.py  test_asd_file_reader.py  test_data.py
tests/SampleData/v7sample/: v7sample00004.asd
tests/SampleData/v7sample_field_spectroscopy/: 44231B009-1-FW300000.asd
tests/sample_data/v6sample/: v6sample00000.asd  v6sample00001.asd  v6sample00002.asd
tests/sample_data/v7sample/: v7sample00000.asd  v7sample00001.asd  v7sample00002.asd  v7sample00003.asd  v7sample00005.asd
tests/sample_data/v7sample_field_spectroscopy/: 44231B009-1-FW3R00000.asd  44231B174-1-FF300000.asd
tests/sample_data/v8sample/: v8sample00001.asd  v8sample00002.asd
