[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyASD"
dynamic = ["version"]
description = "A Python library for reading and parsing all versions of ASD binary spectral files"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["ASD", "spectral files", "spectroradiometer", "remote sensing"]
authors = [
    {name = "Kai Cao", email = "caokai_cgs@163.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "pytest-html>=3.0.0",
    "flake8>=3.8.0",
    "coverage>=5.0.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/KaiTastic/pyASD"
Documentation = "https://github.com/KaiTastic/pyASD#readme"
Repository = "https://github.com/KaiTastic/pyASD"
"Bug Reports" = "https://github.com/KaiTastic/pyASD/issues"
Changelog = "https://github.com/KaiTastic/pyASD/blob/master/CHANGELOG.md"
PyPI = "https://pypi.org/project/pyASD/"

[tool.setuptools]
packages = ["pyASD"]
package-dir = {"pyASD" = "src"}

[tool.setuptools.package-data]
"*" = ["*.mat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=pyASD",
    "--cov-report=html",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["pyASD"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
fallback_version = "1.0.0"

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.pytest_cache
  | __pycache__
  | build
  | dist
  | htmlcov
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
known_first_party = ["pyASD"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
